@@ -1,3 +1,8 @@
+2007-08-29  Chris Lumens  <clumens@redhat.com>
+
+	* pykickstart/commands/network.py:  ipv4= -> noipv4=, ipv6= -> noipv6=
+	on NetworkData objects.
+
 2007-08-24  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart.spec, setup.py:  New version.
